# MADS-EMDM-Exam2

./: README.md  exam2.ipynb  pyproject.toml  requirements.txt
helper_scripts/: draw_graph.py
